syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "SP.Api.Models";

package Api;

message GetLoginAttemptsRequest {
	LoginAttempts loginAttempts = 1;
	bool detectIPRange = 2;
	google.protobuf.Timestamp fromTime = 3;
}

message GetLoginAttemptsResponse {
	int32 result = 1;
}

message AddLoginAttemptRequest {
	LoginAttempts loginAttempts = 1;
}

message AddLoginAttemptResponse {
	bool result = 1;
}

message LoginAttempts {
	int64 id = 1;
	string ipAddress = 2;
	string ipAddress1 = 3;
	string ipAddress2 = 4;
	string ipAddress3 = 5;
	string ipAddress4 = 6;
	string ipAddressRange = 7;
	google.protobuf.Timestamp eventDate = 8;
	string details = 9;
}